manifest/app/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yjmatzip-frontend
  namespace: yjmatzip
spec:
  replicas: 3
  selector:
    matchLabels:
      app: yjmatzip-frontend
  template:
    metadata:
      labels:
        app: yjmatzip-frontend
    spec:
      containers:
      - name: frontend
        image: whdnduf/yjmatzip-frontend:20260303-1553
        imagePullPolicy: Always
        ports:
        - containerPort: 80 # Nginx 기본 포트
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "800m"
            memory: "512Mi" # 정적 파일 서빙이라 메모리를 거의 안 씁니다
---
apiVersion: v1
kind: Service
metadata:
  name: yjmatzip-frontend-svc
  namespace: yjmatzip
spec:
  selector:
    app: yjmatzip-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
