manifest/app/matzip-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yjmatzip-ingress
  namespace: yjmatzip
spec:
  ingressClassName: cilium
  rules:
  - host: matzip.yjmatzip.com
    http:
      paths:
      # 1. /api 로 시작하는 모든 요청은 Node.js 백엔드로 전달
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: yjmatzip-backend-svc
            port:
              number: 80
  - host: api-origin.yjmatzip.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: yjmatzip-backend-svc
            port:
              number: 80
  - host: api.yjmatzip.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: yjmatzip-backend-svc
            port:
              number: 80
      # 2. 그 외의 모든 요청(/)은 React 프론트엔드(Nginx)로 전달
      # - path: /
      #  pathType: Prefix
      #  backend:
      #    service:
      #      name: yjmatzip-frontend-svc
      #      port:
      #        number: 80
